--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Cash Register</title>
   </head>
@@ -16,12 +21,11 @@
         <input type="text" id="cash" />
         <button id="purchase-btn">Purchase</button>
       </form>
-      <img src="cash-register.png" />
+      <img src="https://bit.ly/490Hkr8" />
 
       <div class="small-screen">
         <h5>Total: $1.87</h5>
       </div>
-
       <div class="screen">
         <div class="change-titles">
           <h5>Change in drawer:</h5>
@@ -47,33 +51,7 @@
           <p>$100</p>
         </div>
       </div>
-      <div id="cashback" class="hidden">
-        <div id="change-labels">
-          <p>Status:</p>
-          <p>ONE HUNDRED:</p>
-          <p>TWENTY:</p>
-          <p>TEN:</p>
-          <p>FIVE:</p>
-          <p>ONE:</p>
-          <p>QUARTER:</p>
-          <p>DIME:</p>
-          <p>PENNY:</p>
-        </div>
-        <div id="change-owed">
-          <p>OPEN</p>
-          <p>$100</p>
-          <p>$40</p>
-          <p>$20</p>
-          <p>$50</p>
-          <p>$6</p>
-          <p>$0.5</p>
-          <p>$0.2</p>
-          <p>$0.04</p>
-        </div>
-      </div>
-      <div id="change-due" class="hidden">
-        <!-- stupid hidden div to satisfy freeCodeCamps stupid rules even though the app works perfectly fine -->
-      </div>
+      <div id="change-due"></div>
 
       <footer>
         <p>This project is open source. <a href="https://github.com/Lappage/Cash-Register" target="_blank">Improve this page.</a></p>
